--- a/divtober/scss/components/_header.scss
+++ b/divtober/scss/components/_header.scss
@@ -4,9 +4,7 @@
     width: 100%;
     height: 100px;
     background: #d2d1d1a1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include mixins.flexCenter;
 
 
 &__h1 {
